--- a/css/landingPage.css
+++ b/css/landingPage.css
@@ -18,6 +18,10 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  font-family: Arial, Helvetica, sans-serif;
+}
+.main-text h1{
+  color: #ff6b00;
 }
 
 .nav {
@@ -258,6 +262,54 @@ color: white;
   opacity: 50%;
 }
 
+h1 {
+  font-size: 2.5em;
+  margin-bottom: 20px;
+  color: #333;
+}
+
+h1 span {
+  color: #28a745; /* Green color */
+}
+
+p {
+  font-size: 1.2em;
+  color: #666;
+  margin-bottom: 30px;
+}
+
+.cta-button {
+  background-color: #ff6b00;
+  color: #fff;
+  padding: 15px 30px;
+  font-size: 1.2em;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  text-decoration: none;
+}
+
+.cta-button:hover {
+  background-color: #ff8c3d;
+}
+
+@media screen and (max-width: 768px) {
+  h1 {
+    font-size: 2em;
+  }
+
+  p {
+    font-size: 1em;
+  }
+
+  .cta-button {
+    font-size: 1em;
+    padding: 12px 25px;
+  }
+}
+
+
 .how-it-works {
   display: flex;
   flex-direction: column;
@@ -365,7 +417,8 @@ color: white;
   align-items: center;
   background-color: #1f1d3f;
   color: white;
-  padding: 20px;
+  padding: 20px 100px  50px;
+  width: 100%;
 }
 
 .footer-row {
@@ -380,6 +433,7 @@ color: white;
   width: 30%;
   display: flex;
   flex-direction: column;
+  margin: 30px;
 }
 
 .footer-card p {
