--- a/css/vendor.css
+++ b/css/vendor.css
@@ -119,6 +119,8 @@ body {
   text-decoration: none;
   margin-left: 40px;
   margin-bottom: 100px;
+  transition-duration: 1s;
+  transition-timing-function: ease-in;
 }
 
 .links a:hover{
@@ -137,9 +139,9 @@ body {
 
 .main-text h6 {
   font-size: 30px;
-  line-height: 4rem;
-  width: 80%;
-  padding-bottom: 10px;
+  line-height: 2rem;
+  width: 100%;
+  padding: 10px;
   margin: 0 auto;
 }
 
@@ -165,6 +167,7 @@ body {
     outline: none;
   }
 
+   placeholder
 
 .btn {
   margin-top: 10px;
@@ -250,13 +253,37 @@ button {
     margin-bottom: 10px;
     width: 100%;
 }
+.pq{
+    margin-left: 10px;
+}
 h3 a{
-  color: #ff6600;
+  color: #1f1d3f;
 text-decoration: none;
     font-weight: bold;
     margin-bottom: 5px;
     padding-left: 5px;
 }
+.amount{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-right: 30px;
+}
+#money{
+    font-size: 15px;
+    color: #1f1d3f;
+}
+.amount-btn{
+    margin-right: 10px;
+    padding: 5px;
+    border-radius: 5px;
+    background-color: #ff7a00;
+}
+
+.amount-btn a{
+    color: white;
+    text-decoration: none;
+}   
 .events-cards img{
     width: 100%;
 }
