--- a/css/vendordetails.css
+++ b/css/vendordetails.css
@@ -110,75 +110,27 @@ body {
   fill: black;
 }
 
-.links{
-  margin-bottom: 30px;
+h1{
+    color: white;
+    font-size: 40px;
 }
 
-.links a{
-  color: white;
-  text-decoration: none;
-  margin-left: 40px;
-  margin-bottom: 100px;
+h2{
+    font-size: 20px;
+    color: white;
 }
-
-.links a:hover{
-  text-decoration: 2px underline #ff7a00;
-}
-
-.main-text {
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-  align-items: center;
-  justify-content: space-between;
-  margin-bottom: 100px;
-  color: white;
-}
-
-.main-text h6 {
-  font-size: 30px;
-  line-height: 4rem;
-  width: 80%;
-  padding-bottom: 10px;
-  margin: 0 auto;
-}
-
-.main-search {
-    width: 100%;
-    position: relative;
-  }
-  
-  .main-search i {
-    position: absolute;
-    color: black;
-    left: 31%;
-    top: 50%;
-    transform: translateY(-50%);
-  }
-  
-  .main-search input {
-    width: 40%;
-    padding: 10px;
-    border-radius: 5px;
-    border: 1px solid black;
-    padding-left: 40px;
-    outline: none;
-  }
-
-
-.btn {
+.hire {
   margin-top: 10px;
   padding-top: 10px;
 }
-.btn a{
+.hire a{
   color: white;
   cursor: pointer;
   text-decoration: none;
 }
-button {
-  padding: 10px 25px;
+.hire {
+  padding: 10px;
   background-color: #ff7a00;
-  width: 100%;
   border: none;
   color: white;
   border-radius: 5px;
@@ -191,8 +143,6 @@ button {
   align-items: center;
   background-color: white;
 }
-
-
 
 .events {
  padding: 10px;
@@ -250,13 +200,38 @@ button {
     margin-bottom: 10px;
     width: 100%;
 }
+.pq{
+    margin-left: 10px;
+}
 h3 a{
-  color: #ff6600;
+  color: #1f1d3f;
 text-decoration: none;
     font-weight: bold;
     margin-bottom: 5px;
     padding-left: 5px;
 }
+.amount{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-right: 30px;
+}
+#money{
+    font-size: 15px;
+    color: #1f1d3f;
+}
+.amount-btn{
+    margin-right: 10px;
+    padding: 5px;
+    border: none;
+    border-radius: 5px;
+    background-color: #ff7a00;
+}
+
+.amount-btn a{
+    color: white;
+    text-decoration: none;
+}   
 .events-cards img{
     width: 100%;
 }
